<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/imgContainer"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        app:cardCornerRadius="25dp"
        android:clipToPadding="true"
        app:cardPreventCornerOverlap="true"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/imgRecipe"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_description_detail_image"

            android:src="@drawable/ph_no_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgContainer"
        tools:text="Cheesecake"
        style="@style/title"
        />

    <View
        android:id="@+id/lineBelowRecipeName"
        android:layout_width="70dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple"
        app:layout_constraintStart_toStartOf="@+id/tvRecipeName"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeName" />

    <TextView
        android:id="@+id/lblServings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineBelowRecipeName"
        tools:text="@string/lbl_serving"
        style="@style/textRegular"
        />

    <TextView
        android:id="@+id/lblIngridients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_ngredients"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblServings"
        android:text="@string/lbl_ingredients"
        style="@style/itemTitleBold"
        />

    <LinearLayout
        android:id="@+id/containerIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="54dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblIngridients"
        />

    <TextView
        android:id="@+id/lblDirections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_directions"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerIngredients"
        android:text="@string/lbl_directions"
        style="@style/itemTitleBold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>